--- a/table/table.html
+++ b/table/table.html
@@ -227,7 +227,7 @@
 				};
 
 				$scope.remove = function (item) {
-					return $scope.goods = $scope.goods.filter(function (it) {
+					$scope.goods = $scope.goods.filter(function (it) {
 						return it != item;
 					});
 				};
