--- a/table/table.html
+++ b/table/table.html
@@ -6,6 +6,67 @@
 	<link href="http://cdn.bootcss.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet">
 	<script src="http://cdn.bootcss.com/angular.js/1.4.5/angular.min.js"></script>
 	<title>表格相关</title>
+
+	<style>
+		body {
+			font-family: arial;
+		}
+		
+		table {
+			border: 1px solid #ccc;
+			width: 100%;
+			margin: 0;
+			padding: 0;
+			border-collapse: collapse;
+			border-spacing: 0;
+		}
+		
+		table tr {
+			border: 1px solid #ddd;
+			padding: 5px;
+		}
+		
+		table th,
+		table td {
+			padding: 10px;
+			text-align: center;
+		}
+		
+		table th {
+			text-transform: uppercase;
+			font-size: 14px;
+			letter-spacing: 1px;
+		}
+		
+		@media screen and (max-width: 600px) {
+			table {
+				border: 0;
+			}
+			table thead {
+				display: none;
+			}
+			table tr {
+				margin-bottom: 10px;
+				display: block;
+				border-bottom: 2px solid #ddd;
+			}
+			table td {
+				display: block;
+				text-align: right;
+				font-size: 13px;
+				border-bottom: 1px dotted #ccc;
+			}
+			table td:last-child {
+				border-bottom: 0;
+			}
+			table td:before {
+				content: attr(data-label);
+				float: left;
+				text-transform: uppercase;
+				font-weight: bold;
+			}
+		}
+	</style>
 </head>
 
 <body ng-app="demo">
@@ -21,19 +82,19 @@
 			<thead>
 				<tr>
 					<th>名称</th>
-					<th>价格</th>
+					<th>单价</th>
 					<th>购买数量</th>
-					<th>单品价格</th>
+					<th>价格</th>
 					<th></th>
 				</tr>
 			</thead>
 			<tbody>
 				<tr ng-repeat="item in goods">
-					<td>{{item.name}}</td>
-					<td>{{item.price}}</td>
-					<td>{{item.count}}</td>
-					<td>{{item.count * item.price}}元</td>
-					<td>
+					<td data-label="名称">{{item.name}}</td>
+					<td data-label="单价">{{item.price}}</td>
+					<td data-label="购买数量">{{item.count}}</td>
+					<td data-label="价格">{{item.count * item.price}}元</td>
+					<td data-label="操作">
 						<button class="btn btn-sm btn-warning" ng-click="remove(item)">删除</button>
 					</td>
 				</tr>
@@ -54,28 +115,28 @@
 			<thead>
 				<tr>
 					<th>名称</th>
-					<th>价格</th>
+					<th>单价</th>
 					<th>购买数量</th>
-					<th>单品价格</th>
+					<th>价格</th>
 					<th></th>
 				</tr>
 			</thead>
 			<tbody>
 				<tr ng-repeat-start="item in goods">
-					<td>
+					<td data-label="名称">
 						<button class="btn btn-xs btn-default" ng-click="item.$expand=!item.$expand" ng-class="{'dropdown-toggle':!item.$expand, 'dropup':item.$expand}">
 							<span class="caret"></span>
 						</button>
 						{{item.name}}
 					</td>
-					<td>{{item.price}}</td>
-					<td>
+					<td data-label="单价">{{item.price}}</td>
+					<td data-label="购买数量">
 						{{item.count}}
 						<button class="btn btn-xs btn-info" ng-click="increase(item)">增加</button>
 						<button class="btn btn-xs btn-info" ng-click="decrease(item)">减少</button>
 					</td>
-					<td>{{item.count * item.price}}元</td>
-					<td>
+					<td data-label="价格">{{item.count * item.price}}元</td>
+					<td data-label="操作">
 						<button class="btn btn-sm btn-warning" ng-click="remove(item)">删除</button>
 					</td>
 				</tr>
@@ -110,9 +171,9 @@
 						<input type="checkbox" ng-model="$allChecked" ng-change="checkAll()" />
 					</th>
 					<th>名称</th>
-					<th>价格</th>
+					<th>单价</th>
 					<th>购买数量</th>
-					<th>单品价格</th>
+					<th>价格</th>
 					<th></th>
 				</tr>
 			</thead>
@@ -121,17 +182,17 @@
 					<th>
 						<input type="checkbox" ng-model="item.$checked" ng-change="checkItem(item)" />
 					</th>
-					<td>
+					<td data-label="名称">
 						{{item.name}}
 					</td>
-					<td>{{item.price}}</td>
-					<td>
+					<td data-label="单价">{{item.price}}</td>
+					<td data-label="购买数量">
 						{{item.count}}
 						<button class="btn btn-xs btn-info" ng-click="increase(item)">增加</button>
 						<button class="btn btn-xs btn-info" ng-click="decrease(item)">减少</button>
 					</td>
-					<td>{{item.count * item.price}}元</td>
-					<td>
+					<td data-label="价格">{{item.count * item.price}}元</td>
+					<td data-label="操作">
 						<button class="btn btn-sm btn-warning" ng-click="remove(item)">删除</button>
 					</td>
 				</tr>
@@ -157,22 +218,22 @@
 			<thead>
 				<tr>
 					<th>名称</th>
-					<th>价格</th>
+					<th>单价</th>
 					<th>购买数量</th>
-					<th>单品价格</th>
+					<th>价格</th>
 					<th></th>
 				</tr>
 			</thead>
 			<tbody>
 				<tr ng-repeat="item in goods">
-					<td>
+					<td data-label="名称">
 						<span ng-if="!item.$editing">{{item.name}}</span>
 						<input ng-model="item.name" ng-if="item.$editing" />
 					</td>
-					<td>{{item.price}}</td>
-					<td>{{item.count}}</td>
-					<td>{{item.count * item.price}}元</td>
-					<td>
+					<td data-label="单价">{{item.price}}</td>
+					<td data-label="购买数量">{{item.count}}</td>
+					<td data-label="价格">{{item.count * item.price}}元</td>
+					<td data-label="操作">
 						<button class="btn btn-sm btn-warning" ng-if="!item.$editing" ng-click="item.$editing=true">修改</button>
 						<button class="btn btn-sm btn-primary" ng-if="item.$editing" ng-click="item.$editing=false">保存</button>
 						<button class="btn btn-sm btn-warning" ng-click="remove(item)">删除</button>
